<resources>
    <string name="app_name">ASP Chat App</string>
    <string name="logo">logo</string>
    <string name="login_here">Login Page</string>
    <string name="no_account_click_me">No Account? Click Me</string>
    <string name="register_page">Registration Page</string>
    <string name="name">Name..</string>
    <string name="email">Email..</string>
    <string name="password">Password..</string>
    <string name="create_account">Create Account</string>
    <string name="sign_in">Sign In</string>
    <string name="email_login">Email..</string>
    <string name="password_login">Password..</string>
    <string name="forgot_password_click_here">Forgot Password? Click Here</string>
</resources>
