<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hackg4"
    tools:context=".RegisterActivity">

    <include
        layout="@layout/app_bar_layout"
        android:id="@+id/reg_toolbar" />

    <TextView
        android:id="@+id/txtVlbl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:text="@string/register_page"
        android:textColor="@android:color/holo_green_light"
        android:textSize="30sp" />

    <EditText
        android:id="@+id/txtInpRegName"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="176dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtInpRegEmail"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txtInpRegPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="175dp"
        android:background="@android:color/background_light"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:lines="1"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/holo_green_light"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="78dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/create_account"
        android:textColor="@android:color/holo_green_light"
        android:textSize="18sp"
        android:textStyle="bold" />
</RelativeLayout>